--- a/html/admin.html
+++ b/html/admin.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<section class="header">
 					<a href="#" class="header__logo">indexedDB</a>
-					<div class="header__menu">
+					<div class="header__menu header__menu_alone">
 						<a class="header__curr-user" href="./main.html">Exit</a>
 					</div>
 				</section>
@@ -45,7 +45,7 @@
 						<input class="add-card__inp" type="text" name="inpMemory" id="inpMemory" required>
 					</div>
 					<div class="add-card__bttm">
-						<button class="add-card__btn">Add</button>
+						<button class="add-card__btn" type="button">Add</button>
 					</div>
 				</div>
 			</div>
